platform/ml/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.242
  selector:
    app: mlflow
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-internal
  namespace: mlflow
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
